# moodbar.rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  generate-rick-moodbars.sh
.github/: release-drafter.yml
.github/workflows/: linux-rust-ci.yml  native-ci.yml  pages.yml  pr-semver-label.yml  prepare-release.yml  publish-crates.yml  publish-native-npm.yml  publish-wasm-npm.yml  release-build.yml  release-drafter.yml  rust-ci.yml  wasm-ci.yml
crates/moodbar-analysis/: Cargo.toml  README.md
crates/moodbar-analysis/src/: bands.rs  lib.rs  options.rs  types.rs
crates/moodbar-analysis/src/analyze/: color.rs  fft.rs  frame_analyzer.rs  mod.rs  normalize.rs
crates/moodbar-analysis/src/render/: mod.rs  png.rs  png_split.rs  svg.rs  svg_split.rs  util.rs
crates/moodbar-bindings-schema/: Cargo.toml  README.md
crates/moodbar-bindings-schema/src/: lib.rs
crates/moodbar-cli/: Cargo.toml  README.md
crates/moodbar-cli/src/: main.rs
crates/moodbar-cli/tests/: batch_parallel.rs  png_golden.rs  stdin_generate.rs  svg_golden.rs
crates/moodbar-core/: Cargo.toml  README.md
crates/moodbar-core/src/: lib.rs
crates/moodbar-core/tests/: legacy_parity.rs  surface_contract.rs
crates/moodbar-decode/: Cargo.toml  README.md
crates/moodbar-decode/src/: lib.rs
crates/moodbar-native-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/moodbar-native-ffi/include/: moodbar_native_ffi.h
crates/moodbar-native-ffi/src/: android_jni.rs  errors.rs  lib.rs  options.rs  registry.rs
crates/moodbar-wasm/: Cargo.toml  README.md  README.npm.md  package.json  package.npm.json
crates/moodbar-wasm/src/: lib.rs
crates/moodbar-wasm/tests/: wasm.rs
docs/: .nojekyll  engineering-brief.md  index.html  wasm-demo.html
docs/assets/: app.js  computer-generated-sounds.js  ui.css
docs/plans/: engineering-brief.md  macro-refactor-plan.md  wasm-and-native-plan.md
examples/expo-native/: README.md
examples/web-wasm/: README.md  index.html
packaging/npm/native/: README.npm.md  package.npm.json
scripts/: args.mjs  build-native-android.sh  build-native-ios.sh  bump-version.mjs  generate_legacy_fixture.py  prepare-native-package.mjs  prepare-npm-package.mjs  prepare-package.mjs  tdd-loop.sh  verify-npm-package.mjs  workspace-version.mjs
tests/fixtures/legacy/: README.md
