[workspace]
members = [
  "crates/moodbar-core",
  "crates/moodbar-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/moodbar"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
num-complex = "0.4"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }
symphonia = { version = "0.5", features = [
  "aac",
  "adpcm",
  "alac",
  "flac",
  "isomp4",
  "mkv",
  "mp3",
  "ogg",
  "pcm",
  "vorbis",
  "wav",
] }
