[workspace]
members = [
  "crates/moodbar-analysis",
  "crates/moodbar-bindings-schema",
  "crates/moodbar-decode",
  "crates/moodbar-core",
  "crates/moodbar-cli",
  "crates/moodbar-wasm",
  "crates/moodbar-native-ffi",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gildesmarais/moodbar.rs"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
num-complex = "0.4"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }
symphonia = { version = "0.5", features = [
  "aac",
  "adpcm",
  "alac",
  "flac",
  "isomp4",
  "mkv",
  "mp3",
  "ogg",
  "pcm",
  "vorbis",
  "wav",
] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
base64 = "0.22"
jni = "0.21"
cbindgen = "0.27"
once_cell = "1.21"

[profile.mobile-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
