[package]
name = "moodbar-bindings-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared bindings option schema for wasm/native moodbar surfaces"
readme = "../../README.md"

[dependencies]
moodbar-analysis.workspace = true
serde.workspace = true
