[package]
name = "moodbar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "moodbar"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
moodbar-core = { path = "../moodbar-core" }
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
rayon.workspace = true
