[package]
name = "moodbar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Re-export facade and core DSP pipeline for moodbar audio visualization"
readme = "../../README.md"

[features]
default = ["decode", "png"]
decode = ["dep:symphonia"]
png = ["dep:image"]

[dependencies]
num-complex.workspace = true
rustfft.workspace = true
thiserror.workspace = true
symphonia = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
moodbar-analysis = { workspace = true, features = ["png"] }
