[package]
name = "moodbar-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Audio decode adapters for moodbar analysis"
readme = "README.md"

[dependencies]
moodbar-analysis = { workspace = true, default-features = true }
symphonia.workspace = true
thiserror.workspace = true
